# ct-iot-authentication-service

./: .coverage  .env.example  .env.test  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: action.yml  publish.yml  release.yml  tests.yml
docs/: DIAGRAMS.md  DIAGRAMS.puml
docs/diagrams/: create_authentication_token_activity_diagram.puml  create_confirm_account_token_activity_diagram.puml  verify_authentication_token_activity_diagram.puml  verify_confirm_account_token_activity_diagram.puml
helm/authentication-service/: local-values.yaml  values.yaml
helm/authentication-service/secrets/: credentials.yaml
helm/authentication-service/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
src/: config.py  schemas.py
src/authentication_service/: __main__.py  service.py
src/decorators/: metrics.py
src/routers/: health.py  jwt.py  jwt_authentication.py  jwt_confirm_account.py
src/utils/: app_util.py  auth_util.py  confirm_account_util.py  observability_util.py
tests/: config.py  conftest.py  pytest-cov.ini
tests/helper/: check_version_helper.py  jwt_helper.py  models_helper.py  routes_helper.py  user_helper.py
tests/unit/exceptions/: jwt_create_exceptions_test.py  jwt_exceptions_test.py  jwt_verify_exceptions_test.py
tests/unit/routers/: health_test.py  jwt_create_authentication_test.py  jwt_create_confirm_account_test.py  jwt_create_test.py  jwt_test.py  jwt_verify_authentication_test.py  jwt_verify_confirm_account_test.py  jwt_verify_test.py  routes_test.py
tests/unit/utils/: app_util_test.py  auth_util_test.py  confirm_account_util_test.py  utils_test.py
